force-app/main/default/objects/Inventory__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <label>Available</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>