force-app/main/default/objects/Inventory__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date when the item must be returned</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>