force-app/main/default/objects/Inventory__c/fields/Rented__c.field-meta.xml
<CustomField>
    <fullName>Rented__c</fullName>
    <label>Rented</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>